[package]
name = "pyckitup-core"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
num-traits = "0.2"
rustpython-compiler = { git = "https://github.com/RustPython/RustPython" }
scoped-tls = "1.0"
itertools = "0.9"
futures = "0.3"
anyhow = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.13"
once_cell = "1.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.rustpython-vm]
git = "https://github.com/RustPython/RustPython"
default-features = false
features = ["compile-parse", "freeze-stdlib"]

[dependencies.quicksilver]
version = "0.4"
default-features = false
features = ["font", "ttf", "saving", "web-sys"]

