[package]
name = "pyckitup-wasm"
version = "0.1.0"
authors = ["Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyckitup-core = { path = "../core" }
wasm-bindgen = "0.2"
rustpython-bytecode = { git = "https://github.com/RustPython/RustPython" }
bincode = "1.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false#["-O1"]
